# aethelred-sdk-rs

./: Cargo.toml  README.md  REPO_SPLIT_ORIGIN.md  SECURITY.md  lcov.info  repo-role.json
docs/security/: release-provenance.md  threat-model.md
examples/: submit_job.rs  verify_seal.rs
src/: distributed.rs  lib.rs  lib_full.rs  quantize.rs  runtime.rs  tensor.rs
src/core/: client.rs  config.rs  error.rs  mod.rs  types.rs
src/crypto/: mod.rs
src/jobs/: mod.rs
src/models/: mod.rs
src/nn/: mod.rs
src/optim/: mod.rs
src/seals/: borrowed.rs  mod.rs
src/validators/: mod.rs
src/verification/: mod.rs
src/wasm/: mod.rs
